--- a/src/views/bookView.ejs
+++ b/src/views/bookView.ejs
@@ -103,7 +103,7 @@
                               </h4></div>
                             <div class="col-xs-3"></div>
                           </div>
-                          <br><%=book.details.description%><br>
+                          <br><%-book.details.description%><br>
                         </div>
                       </div>
                       <hr>
