Added and connected authors list/view.

--- a/src/views/authorListView.ejs
+++ b/src/views/authorListView.ejs
@@ -90,20 +90,17 @@
           
           
           <!--/stories-->
-          <%for(let i=0; i<books.length; i++) {%>
+          <%for(let i=0; i<authors.length; i++) {%>
                 <div class="row">    
                         <br>
                         <div class="col-md-2 col-sm-3 text-center">
-                          <a class="story-title" href="#"><img alt="" src="<%=newBooks[i].image_url%>" style="width:100px;height:100px" class=""></a>
+                          <a class="story-title" href="#"><img alt="" src="<%=authors[i].image_url%>" style="width:100px;height:100px" class=""></a>
                         </div>
                         <div class="col-md-10 col-sm-9">
-                          <h3><%=books[i].title%></h3>
+                          <h3><%=authors[i].name%></h3>
                           <div class="row">
                             <div class="col-xs-9">
-                              <h4><span class="label label-default"><%=books[i].author%></span></h4><h4>
-                              <small style="font-family:courier,'new courier';" class="text-muted">2 hours ago  • 
-                              <a href="/books/<%=books[i]._id%>" class="text-muted">Read More</a></small>
-                              </h4></div>
+                              <h4><a class="label label-default" href="/authors/<%=authors[i].id%>">About</a></h4></div>
                             <div class="col-xs-3"></div>
                           </div>
                           <br><br>
@@ -117,7 +114,7 @@
           <!--/stories-->
           
           
-         
+          
         
           
         </div>
