--- a/src/views/bookListView.ejs
+++ b/src/views/bookListView.ejs
@@ -33,14 +33,6 @@
         </li>
         <%}%>
       </ul>
-      <ul class="nav navbar-right navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-search"></i></a>
-          <ul class="dropdown-menu" style="padding:12px;">
-            <form class="form-inline">
-              <button type="submit" class="btn btn-default pull-right"><i class="glyphicon glyphicon-search"></i></button><input type="text" class="form-control pull-left" placeholder="Search">
-            </form>
-          </ul>
         </li>
       </ul>
     </nav>
@@ -51,12 +43,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-7">
-        <h1><%=title%>
-          <p class="lead"></p>
-        </h1>
       </div>
       <div class="col-md-5">
         <div class="well well-lg"> 
+            <h1><%=title%>
+            </h1>
           <div class="row">
             <div class="col-sm-12">
               
@@ -71,7 +62,6 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="top-spacer"> </div>
       </div>
     </div> 
   </div><!-- /cont -->
@@ -97,12 +87,11 @@
                           <a class="story-title" href="#"><img alt="" src="<%=newBooks[i].image_url%>" style="width:100px;height:100px" class=""></a>
                         </div>
                         <div class="col-md-10 col-sm-9">
-                          <h3><%=books[i].title%></h3>
+                          <h3><a href="/books/<%=books[i]._id%>"><%=books[i].title%></a></h3>
                           <div class="row">
                             <div class="col-xs-9">
-                              <h4><span class="label label-default"><%=books[i].author%></span></h4><h4>
-                              <small style="font-family:courier,'new courier';" class="text-muted">2 hours ago  • 
-                              <a href="/books/<%=books[i]._id%>" class="text-muted">Read More</a></small>
+                              <h4><a class="label label-default" href="/authors/<%=books[i].authId%>"><%=books[i].author%></a></h4><h4>
+                              <small style="font-family:courier,'new courier';" class="text-muted"> 
                               </h4></div>
                             <div class="col-xs-3"></div>
                           </div>
@@ -136,11 +125,7 @@
   <div class="row">
     <div class="col col-sm-12">
       
-      <h1>Follow Us</h1>
-      <div class="btn-group">
-       <a class="btn btn-twitter btn-lg" href="#"><i class="icon-twitter icon-large"></i> Twitter</a>
-	   <a class="btn btn-facebook btn-lg" href="#"><i class="icon-facebook icon-large"></i> Facebook</a>
-	   <a class="btn btn-google-plus btn-lg" href="#"><i class="icon-google-plus icon-large"></i> Google+</a>
+      
       </div>
       
     </div>
