--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -33,16 +33,7 @@
         </li>
         <%}%>
       </ul>
-      <ul class="nav navbar-right navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-search"></i></a>
-          <ul class="dropdown-menu" style="padding:12px;">
-            <form class="form-inline">
-              <button type="submit" class="btn btn-default pull-right"><i class="glyphicon glyphicon-search"></i></button><input type="text" class="form-control pull-left" placeholder="Search">
-            </form>
-          </ul>
-        </li>
-      </ul>
+      
     </nav>
   </div>
 </header>
@@ -51,12 +42,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-7">
-        <h1><%=title%>
-          <p class="lead"></p>
-        </h1>
+        
       </div>
       <div class="col-md-5">
         <div class="well well-lg"> 
+            <h1><%=title%>
+            </h1>
           <div class="row">
             <div class="col-sm-12">
               
@@ -93,7 +84,7 @@
           <div class="row">    
             <br>
             <div class="col-md-2 col-sm-3 text-center">
-              Sign Up! Or <a href='/auth/signin'>sign in</a>
+              Sign Up! or <a class="label label-default" href='/auth/signin'>Sign In!</a>
               <form name='signUpForm' action='/auth/signUp' method='post'>
                 UserName: <input name='username' id='username' /><br/>
                 Password: <input name='password' id='password' /><br/>
@@ -120,11 +111,7 @@
   <div class="row">
     <div class="col col-sm-12">
       
-      <h1>Follow Us</h1>
-      <div class="btn-group">
-       <a class="btn btn-twitter btn-lg" href="#"><i class="icon-twitter icon-large"></i> Twitter</a>
-	   <a class="btn btn-facebook btn-lg" href="#"><i class="icon-facebook icon-large"></i> Facebook</a>
-	   <a class="btn btn-google-plus btn-lg" href="#"><i class="icon-google-plus icon-large"></i> Google+</a>
+      
       </div>
       
     </div>
